# TFlies

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test_api.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  health.py  projects.py  tasks.py  time_slices.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  base.py  deleted_task.py  project.py  task.py  time_slice.py
app/schemas/: base.py  deleted_task.py  project.py  task.py  time_slice.py
app/services/: project_service.py  task_service.py  time_slice_service.py
migrations/: env.py
migrations/versions/: 0236a1bfc28b_add_deleted_task_table.py  04fd2cc98063_unify_timezone_columns.py  39492233c0a3_allow_null_fields_in_time_slices.py  6bffedbf393a_add_gtd_and_scheduling_fields.py  757673d55512_add_is_ddl_field_to_task.py  8a253c4dcbc8_allow_null_estimated_time_ms.py  9058b5fbf03e_init_schema.py  9c032e296b34_add_execution_state_and_update_task_.py  b530655efe65_add_position_field_to_task.py
src/: TFlies.cpp  dataType.hpp  id.cpp  id.hpp  logger.cpp  logger.hpp  tNode.cpp  tNode.hpp  utils.cpp  utils.hpp  viewer.cpp  viewer.hpp
test/: id_test.cpp
third_lib/: cmdline.h
tui/: __init__.py  __main__.py  api.py  app.py  config.py  models.py  styles.tcss
tui/widgets/: __init__.py  activity_heatmap.py  command_input.py  detail_panel.py  detail_tree.py  stats_panel.py  task_status_panel.py  task_tree.py  time_progress_panel.py
web/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
web/public/: test.html
web/src/: App.vue
web/src/api/: client.ts  index.ts  projects.ts  tasks.ts  timeSlices.ts
web/src/assets/: main.css
web/src/components/: ActivityHeatmap.vue  DailyEfficiencyChart.vue  WeeklyBarChart.vue
web/src/composables/: useResponsive.ts  useTaskFormat.ts  useTaskStatus.ts  useTaskTree.ts  useTasks.ts  useTimeSlices.ts
web/src/composables/constants/: taskConstants.ts
web/src/types/: index.ts
web/src/views/: Dashboard.vue  MainView.vue  MobileView.vue  ProjectsView.vue  TrashView.vue
