[project]
name = "tbox"
version = "0.1.0"
description = "TBox - Time-box Management System Backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "email-validator>=2.3.0",
    "fastapi>=0.120.1",
    "httpx[http2]>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "textual>=6.4.0",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
